# Hakka_news_crawler

./: .gitignore  README.md  all_crawler.ipynb  change.py  crawler.ipynb  descriptioon_crawler.ipynb  pyproject.toml  run.py  test.py
all_data/: 0.csv  fail.txt  train.csv
data/: train.csv  url.csv
description_data/: fail.txt
lib/: step_task.py  util.py
mp3_data/: train.csv
test_data/csv/: 0.csv
