[tool.poetry]
name = "hakka-news-crawler"
version = "0.1.0"
description = ""
authors = ["Takala <dylan91011028@gmail.com>"]
readme = "README.md"
packages = [{include = "hakka_news_crawler"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.1"
panda = "^0.3.1"
pytube = "^15.0.0"
requests = "^2.31.0"
pandas = "^2.0.3"
moviepy = "^1.0.3"
ffmpeg = "^1.4"
imageio = "^2.31.1"
pydub = "^0.25.1"
opencv-python = "^4.8.0.74"
imagehash = "^4.3.1"
pillow = "^10.0.0"
pytesseract = "^0.3.10"
zhon = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
